feat: add batch query api
