# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample server Petstore server.",
+        "description": "This is a simple lbs server, currently only query location by IP feature is implemented",
         "title": "Nexus LBS Api",
         "termsOfService": "https://github.com/nexuslab-dev/nexus-lbs",
         "contact": {},
@@ -9,6 +9,40 @@
     },
     "basePath": "/v1/api/",
     "paths": {
+        "/city/batch": {
+            "post": {
+                "description": "batch query city by IPs, with optional lang param",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lbs"
+                ],
+                "summary": "batch query city by IPs",
+                "parameters": [
+                    {
+                        "description": "json payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.RequestBatch"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.CityResponseBatch"
+                        }
+                    }
+                }
+            }
+        },
         "/city/{ip}": {
             "get": {
                 "description": "query city by IP, with optional lang param",
@@ -39,6 +73,40 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/v1.CityResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/country/batch": {
+            "post": {
+                "description": "batch query country by IPs, with optional lang param",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "lbs"
+                ],
+                "summary": "batch query country by IPs",
+                "parameters": [
+                    {
+                        "description": "json payload",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.RequestBatch"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/v1.CountryResponseBatch"
                         }
                     }
                 }
@@ -208,6 +276,23 @@
                 }
             }
         },
+        "v1.CityResponseBatch": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/core.CityRecord"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "v1.CountryResponse": {
             "type": "object",
             "properties": {
@@ -218,6 +303,37 @@
                     "$ref": "#/definitions/core.CountryRecord"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.CountryResponseBatch": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/core.CountryRecord"
+                    }
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.RequestBatch": {
+            "type": "object",
+            "properties": {
+                "ip": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "lang": {
                     "type": "string"
                 }
             }
